--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,18 @@
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
         </dependency>
+      <dependency>
+        <groupId>org.parboiled</groupId>
+        <artifactId>parboiled-core</artifactId>
+        <version>1.1.4</version>
+        <scope>test</scope>
+      </dependency>
+        <dependency>
+            <groupId>org.sonatype.sisu</groupId>
+            <artifactId>sisu-guice</artifactId>
+            <version>2.1.7</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
