--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>2.1.7</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
